[package]
name = "libnetfilter_queue-sys"
description = "A FFI to libnetfilter_queue-sys"
version = "0.1.0"
authors = ["eldesh <nephits@gmail.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.51"
pkg-config = "0.3"

[dependencies]
libc = "0.2"

[dev-dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.6"

